--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ h1 {
   left: 0;
   height: 3px;                /* 線の太さ */
   width: 40%;                /* 線の長さ（h2の40%） */
-  background-color: #9B59B6; /* 線の色：明るいオレンジ */
+  background-color: #26466D; /* 線の色：明るいオレンジ */
   border-radius: 2px;        /* 少し丸くする（おしゃれ度UP） */
 }
 .info-row {
@@ -219,7 +219,7 @@ h1 {
   left: 0;
   height: 3px;                /* 線の太さ */
   width: 50%;                /* 線の長さ（h2の40%） */
-  background-color: #9B59B6; /* 線の色：明るいオレンジ */
+  background-color: #26466D ; /* 線の色：明るいオレンジ */
   border-radius: 2px;        /* 少し丸くする（おしゃれ度UP） */
   margin-bottom: 0px;
 }
@@ -398,8 +398,8 @@ label {
   margin: 80px auto 10px auto; 
   margin-left: 10px;
   margin-right: 10px;
-  border: 2px solid #9B59B6; /* オレンジ系の枠線 */
-  background-color: #F5EBFA; /* 薄いクリーム色の背景 */
+  border: 2px solid #26466D ; /* オレンジ系の枠線 */
+  background-color: #E6F0FA; /* 薄いクリーム色の背景 */
   border-radius: 8px;      /* 角を少し丸める */
   padding: 20px 30px;      /* ボックスの内側の余白 */
   box-shadow: 0 2px 4px rgba(0,0,0,0.05);
@@ -413,7 +413,7 @@ label {
   margin-top: 0;
   margin-bottom: 10px;
   padding-bottom: 10px;
-  border-bottom: 1px dashed #B799D6; /* 見出しの下に点線 */
+  border-bottom: 1px dashed #A9BDDB; /* 見出しの下に点線 */
 }
 
 .notes-box ul {
@@ -462,7 +462,7 @@ label {
   bottom: 0;
   left: 0;
   width: 4px;
-  background-color: #9B59B6;
+  background-color: #26466D ;
   border-radius: 2px;  /* ← これで丸くなる */
 }
 
@@ -482,7 +482,7 @@ label {
   width: 6px;
   height: 6px;
   background-color: white;
-  border: 3px solid #9B59B6;
+  border: 3px solid #26466D ;
   border-radius: 50%;
   z-index: 1;
 }
