--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,7 @@ label {
   content: "";
   position: absolute;
   bottom: 0;
-  left: 0;
+  left: 50%;
   width: 100%; 
   height: 3px;
   background-color: #26466D;
