--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,6 @@ label {
 .drink-list-container h2 {
   font-family: 'Kiwi Maru', sans-serif;
   font-size: 22px;
-  text-align: center;
   margin-bottom: 15px;
   position: relative;
   padding-bottom: 10px;
@@ -418,6 +417,10 @@ label {
   background-color: #26466D;
   border-radius: 2px;
 }
+.h2-wrapper {
+    text-align: center;
+}
+
 
 /* テーブルを囲むスクロール用コンテナ */
 .table-scroll-container {
