--- a/css/style.css
+++ b/css/style.css
@@ -411,7 +411,7 @@ label {
   content: "";
   position: absolute;
   bottom: 0;
-  left: 50%;
+  left: 0;
   width: 100%; 
   height: 3px;
   background-color: #26466D;
